# Website

open_it/: .env  manage.py  pyproject.toml
open_it/Open_it/: asgi.py  settings.py  wsgi.py
open_it/main_page/: models.py
open_it/main_page/migrations/: 0001_initial.py  0002_remove_catalog_price_catalog_addition_and_more.py
